# CodeReviewAI

./: .gitignore  LICENSE  README.md  api_requests.py  config.ini  config.py  example.env  main.py  pyproject.toml  requirements.txt  schemas.py  services.py
tests/: test_api_requests.py  test_services.py  test_sevices.py
