[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["MaksymBratsiun <111972238+MaksymBratsiun@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
